RESOLVED FIXED125051
[Cocoa] The PageLoadState::Observer is not being set on iOS
https://bugs.webkit.org/show_bug.cgi?id=125051
Summary [Cocoa] The PageLoadState::Observer is not being set on iOS
Sam Weinig
Reported 2013-12-01 17:47:25 PST
[Cocoa] The PageLoadState::Observer is not being set on iOS
Attachments
Patch (1.50 KB, patch)
2013-12-01 17:48 PST, Sam Weinig
mitz: review+
Sam Weinig
Comment 1 2013-12-01 17:48:11 PST
mitz
Comment 2 2013-12-01 17:49:20 PST
Comment on attachment 218126 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=218126&action=review > Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm:43 > +#if WK_API_ENABLED Not sure we need these conditionals in iOS-only files.
Sam Weinig
Comment 3 2013-12-01 17:50:36 PST
(In reply to comment #2) > (From update of attachment 218126 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=218126&action=review > > > Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm:43 > > +#if WK_API_ENABLED > > Not sure we need these conditionals in iOS-only files. I'm going to keep it for consistency for now.
Sam Weinig
Comment 4 2013-12-01 17:50:51 PST
Note You need to log in before you can comment on or make changes to this bug.