[Cocoa] The PageLoadState::Observer is not being set on iOS https://bugs.webkit.org/show_bug.cgi?id=125051

Reviewed by Dan Bernstein.

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::platformInitialize):
Add missing call to _finishInitialization.


Canonical link: https://commits.webkit.org/143157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159906 268f45cc-cd09-0410-ab3c-d52691b4dbfc